fix: fixed alignment of ui

--- a/css.css
+++ b/css.css
@@ -12,6 +12,7 @@ img {
 }
 
 #box {
+    align-self: center;
     align-items: center;
 }
 
